# UTAU-Language-Development-Tool

./: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  README.md  additionalfunc.cpp  additionalfunc.hpp  generation.cpp  generation.hpp  global.cpp  global.hpp  main.cpp  stdafx.hpp
